fix: improve branch comparison statistics
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>